# renderers

./: .gitignore  Cargo.toml  Justfile  README.md  log.txt
.cargo/: config.toml
assets/: .gitignore  cube.stl  manifest.json
assets/scenes/cube/: camera.json
assets/scenes/teapot/: camera.json
benchmark/: benchmark.sh
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/arguments/: mod.rs  output.rs  renderer.rs
common/: Cargo.toml
common/src/: camera.rs  lib.rs  light.rs  scene.rs  util.rs
common/src/image/: jxl.rs  mod.rs  png.rs  ppm.rs
common/src/model/: mod.rs  triangle.rs
common/src/model/format/: obj.rs  stl.rs
common/src/surface/: format.rs  mod.rs
cpu-rasterizer/: Cargo.toml
cpu-rasterizer/src/: lib.rs
cpu-ray-tracer/: Cargo.toml
cpu-ray-tracer/src/: lib.rs  ray.rs
cpu-ray-tracer/src/bvh/: bounding_box.rs  builder.rs  mod.rs  node.rs  triangle.rs
cpu-ray-tracer/src/bvh2/: bounding_box.rs  builder.rs  mod.rs
cpu-ray-tracer/src/intersect/: mod.rs
docs/: RESOURCES.md
rasterizer/: Cargo.toml
rasterizer/src/: lib.rs
