[workspace]
resolver = "3"
members = ["cli", "common", "cpu-ray-tracer", "cpu-rasterizer"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0

[profile.profiling]
inherits = "release"
debug = true

[workspace.dependencies]
glam = { version = "0.30.9", features = ["serde"] }
bytes = "1.10.1"
tap = "1.0.1"

[workspace.lints.clippy]
get_first = "allow"
